# sig-benchmarks

./: .gitignore  Manifest.toml  Project.toml  README.md  benchmark.jl  benchmark.py  benchmark_config.yaml  benchmark_old.py  check_signatures.py  common.py  compare_benchmarks.py  pyproject.toml  run_benchmarks.py  setup_julia_env.jl
.github/workflows/: ci.yml
adapters/julia/: Manifest.toml  Project.toml  run_chen.jl
adapters/python/: run_chen.py  run_iisignature.py  run_pysiglib.py
config/: benchmark_sweep.yaml  libraries_registry.yaml  smoke.yaml
runs/benchmark_20251202_223554/: benchmark_sweep.yaml  libraries_registry.yaml  results.csv
runs/benchmark_python_only_20251130_142443/: benchmark_config.yaml  config_resolved.json  run_metadata.json
runs/benchmark_python_only_20251130_143029/: benchmark_config.yaml  config_resolved.json  run_metadata.json
runs/benchmark_python_only_20251130_143151/: SUMMARY.txt  config_resolved.json  python_results.csv  run_metadata.json
runs/benchmark_python_only_20251130_143613/: SUMMARY.txt  python_results.csv  run_metadata.json
src/: orchestrator.py  plotting.py  pyproject.toml
src/common/: __init__.py  adapter.py  paths.py
tests/: test_paths.py
